cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_kind_any_principal_no_schema.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: entity_type_kind.to_documentation_string(None)
---
*Schema not available - any principal permitted*
