cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_kind_set_empty.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: entity_type_kind.to_documentation_string(Some(&schema))
---
**Type**

Entity Type: `User`

Attributes:

```cedarschema
age: Long
name: String
```
