cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_kind_set_multiple.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: entity_type_kind.to_documentation_string(Some(&schema))
---
**Possible Types**

This entity can be any of the following entity types:

**Type: `Photo`**

**Type: `User`**

Attributes:

```cedarschema
age: Long
name: String
```
