cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_kind_set_multiple_no_schema.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: entity_type_kind.to_documentation_string(None)
---
**Possible Types**

This entity can be any of the following entity types:

**Type: `Photo`**

**Type: `User`**
