cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_no_schema.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: et.to_documentation_string(None)
---
**Type**

Entity Type: `User`
