cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_type_with_schema.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: et.to_documentation_string(Some(&schema))
---
**Type**

Entity Type: `User`

Attributes:

```cedarschema
age: Long
name: String
```
