cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__entity__test__entity_uid_with_schema.snap
---
source: cedar-language-server/src/documentation/entity.rs
expression: uid.to_documentation_string(Some(&schema))
---
**Entity**

Entity: `User::"alice"`

Type: `User`

Available Attributes:

```cedarschema
age: Long
name: String
```
